# tensorrtx

./: .gitignore
arcface/: CMakeLists.txt  arcface-mobilefacenet.cpp
retinaface/: CMakeLists.txt  README.md  Resnet50_Final_all.yaml  common.hpp  eval_r50.cpp  face_align.h  r50_int8calib.table  retina_r50.cpp  retinaface_trt.py  test_io.cpp
retinaface/widerface_evaluate/: box_overlaps.c
